--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ paginate_path: /news/page:num/
 permalink: /news/:year/:month/:day/:title.html
 markdown: rdiscount
 pygments: true
-exclude: ['*.sublime-*', drafts, templates, build, s3_website.xml, .gitignore, .dropbox, .DS_Store]
+exclude: ['*.sublime-*', drafts, templates, build, s3_website.xml, .gitignore, .dropbox, .DS_Store, README.*]
